crates/core/tests/snapshots/integration__rewrite-nodes-windows.snap
---
source: crates/core/tests/integration.rs
expression: snap
---
{
  "test": {
    "name": "test",
    "type": "dir",
    "mode": "[some]",
    "content": None,
    "subtree": "[some]",
  },
  "test\\0": {
    "name": "0",
    "type": "dir",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "content": None,
    "subtree": "[some]",
  },
  "test\\0\\0": {
    "name": "0",
    "type": "dir",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "content": None,
    "subtree": "[some]",
  },
  "test\\0\\0\\9": {
    "name": "9",
    "type": "dir",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "content": None,
    "subtree": "[some]",
  },
  "test\\0\\0\\9\\0": {
    "name": "0",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("aa6da76dc4b3bd8d8cd9d42c5ed6db2e9c3e43cecef7e7ee925a3accab96ad79"),
    ]),
  },
  "test\\0\\0\\9\\1": {
    "name": "1",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("bd15c2d9117aa305a0cf99c9cc30359b66ee454b00b897fb1a925c56025f4556"),
    ]),
  },
  "test\\0\\0\\9\\10": {
    "name": "10",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("753d116d34c772059a9a4a2ca33f6ea9ac618470acc13687d08fff7eb5ad3c72"),
    ]),
  },
  "test\\0\\0\\9\\11": {
    "name": "11",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("efe42dd90fd602df1c5b3b7675cd845e23befba069eac0222a9997fea2a9852f"),
    ]),
  },
  "test\\0\\0\\9\\12": {
    "name": "12",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("032ad465747269b41dbdfc87accad1fd49e8dc574ae4bfaf49f036150ec92e57"),
    ]),
  },
  "test\\0\\0\\9\\13": {
    "name": "13",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("b0b5afc29b6391722bd60a9a74c386c856cb130a219954f34944a4f19bbecc41"),
    ]),
  },
  "test\\0\\0\\9\\14": {
    "name": "14",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("b19a49a2e711d5547e1fb247170c58d2da17f9b0bbf75eb84507097a301f1c6d"),
    ]),
  },
  "test\\0\\0\\9\\15": {
    "name": "15",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("f11e72e0290dc75261ee48c39fd42597bdcd80e110ffd0651f71d54ea22030e5"),
    ]),
  },
  "test\\0\\0\\9\\16": {
    "name": "16",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("71935a6f85198c65584ed5c4ff5e34cf93cb79756023e82ecc85153663be2b00"),
    ]),
  },
  "test\\0\\0\\9\\17": {
    "name": "17",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("b81f6dd6ad54fbed57ffac74bcecf9f1a56ce8948edc92153ee34ed415ed68d1"),
    ]),
  },
  "test\\0\\0\\9\\18": {
    "name": "18",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("1fad45c4bf21695fae9e100626f42d35d8c2c48cb90f6a6256973c262608879d"),
    ]),
  },
  "test\\0\\0\\9\\19": {
    "name": "19",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("92c4aa4fa67ede99b9ab1b694bc32b4f3d127f406a7e6583ecbe55b1bb919928"),
    ]),
  },
  "test\\0\\0\\9\\2": {
    "name": "2",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("f5a3517234ef2f213afe617cdab9d25364e1c8c9e61198bf387b157542ee7dbb"),
    ]),
  },
  "test\\0\\0\\9\\20": {
    "name": "20",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("737c19313675671c589bfc613b0b736b95a58218486d09d3a7a649f324d81ef7"),
    ]),
  },
  "test\\0\\0\\9\\21": {
    "name": "21",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("ee25130a4e74b1306087799914d8b92aed2c385b06256705b18266ff088524f4"),
    ]),
  },
  "test\\0\\0\\9\\22": {
    "name": "22",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("3492c28f8ddbb9186e483ef9eb1cc7042c5adf871a4d15d2edf8ee7b2b04069b"),
    ]),
  },
  "test\\0\\0\\9\\23": {
    "name": "23",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("b321dedc16124312ed08cb7f9c67006bd6a4f946ca04bc178323e6147b081943"),
    ]),
  },
  "test\\0\\0\\9\\24": {
    "name": "24",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("7020db85ffe6a3fd5f34971ff37a20fa5d32947181692bfbcca62cfc4a9221d0"),
    ]),
  },
  "test\\0\\0\\9\\25": {
    "name": "25",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("75e7274ef54e91c2857ba0de4c869388df3f9c657d776a3e90eaf3f3f619536d"),
    ]),
  },
  "test\\0\\0\\9\\26": {
    "name": "26",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("418b691988d9bc7357b99c5baf31e83436315d1bcc887482dd83a8537183af17"),
    ]),
  },
  "test\\0\\0\\9\\27": {
    "name": "27",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("06a5749af5715af19fde59d1caaa542df00c56aa0058bf99b67dec5216c27df6"),
    ]),
  },
  "test\\0\\0\\9\\28": {
    "name": "28",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("61e8ffda5a11d743d7dc4bcfd1e18e8b6179a53f8b28b25adf55d3acb0b10eff"),
    ]),
  },
  "test\\0\\0\\9\\29": {
    "name": "29",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("60c1c2f3a0b8e5b1c4e2b7f1453661170395c5c26f2e2d241e81eb929cfc930f"),
    ]),
  },
  "test\\0\\0\\9\\3": {
    "name": "3",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("f0ad279385b5b5c862e1e2fdd599616115729e0b8085833d7b31de68c8326b85"),
    ]),
  },
  "test\\0\\0\\9\\30": {
    "name": "30",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("790c34f1d4d95a6067f2406a78aa0dcca2fc2aa1db932fbd865ce9cafd7baa23"),
    ]),
  },
  "test\\0\\0\\9\\31": {
    "name": "31",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("8e53f45db9249373828c588774471d34c9c1e436b83b1603a49d675de810db7e"),
    ]),
  },
  "test\\0\\0\\9\\32": {
    "name": "32",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("c4eccf95ba2409d21283981297bf9919ec15c2cc0dadef84aafaad49a0c79130"),
    ]),
  },
  "test\\0\\0\\9\\33": {
    "name": "33",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("da8b8b2d79bba6a3d4784233e4421293cea0cf27fd03521e11ce0c7c941f6dbb"),
    ]),
  },
  "test\\0\\0\\9\\34": {
    "name": "34",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("a1413ef1018e7a4f3df7f19aad942a611cbda5bdd45d4269cb54d5f9fa58cd01"),
    ]),
  },
  "test\\0\\0\\9\\35": {
    "name": "35",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("f534a7fe839d440a0fdd1d45254921601b2a90ff5b61edcdc631b722f84a0dbb"),
    ]),
  },
  "test\\0\\0\\9\\36": {
    "name": "36",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("d56e2a8c47f4ae36886784c852916f36036f3daffa547a5922dda5814ecc5a86"),
    ]),
  },
  "test\\0\\0\\9\\37": {
    "name": "37",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("5800df73dcfdbd261800f2474c8631fe0727fbc1788cfd70bd206ab2f50b0707"),
    ]),
  },
  "test\\0\\0\\9\\38": {
    "name": "38",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("e7c987bd8d9257bea1e44f882bc075c84ee7f103d68eec8677e37b49d2854d90"),
    ]),
  },
  "test\\0\\0\\9\\39": {
    "name": "39",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("03a1411035add5b10ed183b2ca7d8db8deee2402f45ee445f54de50896c3e26f"),
    ]),
  },
  "test\\0\\0\\9\\4": {
    "name": "4",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("917aae16764fc905abf0514e965133ed80e2b66c426fb09be24eabd452d4438d"),
    ]),
  },
  "test\\0\\0\\9\\40": {
    "name": "40",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("1adcd19cf770f7d8ab3bb4b3996fb6187f59c468953848ec4f119c9cef484f28"),
    ]),
  },
  "test\\0\\0\\9\\41": {
    "name": "41",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("b5debda793f22adb93204dc81f107d03636b7431192fc8497f5c9a340e43460c"),
    ]),
  },
  "test\\0\\0\\9\\42": {
    "name": "42",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("e6e9b35f3ca77afbd0043bc42085b814ceea8cfb93a0bcba9696dee5034ffead"),
    ]),
  },
  "test\\0\\0\\9\\43": {
    "name": "43",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("31d87fd77a88ca00e9c5612f578c0b3243347ba328a6daa09742fdc8c7cec6f4"),
    ]),
  },
  "test\\0\\0\\9\\44": {
    "name": "44",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("76aec0f2d829d01eff332099ebd5628f61adc72ff44e7d6b82beabc28fa44f1f"),
    ]),
  },
  "test\\0\\0\\9\\45": {
    "name": "45",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("121242341ff94a05074a31cb2a0f566093e5c052e64dcde4c0c9b686e58daf87"),
    ]),
  },
  "test\\0\\0\\9\\46": {
    "name": "46",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("a69efe0ab923672b5aa1a2113f54e80684a7c126c1114af4fac3953be18bea74"),
    ]),
  },
  "test\\0\\0\\9\\47": {
    "name": "47",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("a50a7ab010d0d349b213576d1e2d2d2b345334be1be6f62798d250fc1e5cc51f"),
    ]),
  },
  "test\\0\\0\\9\\48": {
    "name": "48",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("32715f839edd796c5b6f2d48c88748857ed439867c2dc4b2b65c5f96c6d9ef73"),
    ]),
  },
  "test\\0\\0\\9\\49": {
    "name": "49",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("d3fdbaa72299c1abfe47bc26bdf201cc5cb66efc031e517111d413c38bfea882"),
    ]),
  },
  "test\\0\\0\\9\\5": {
    "name": "5",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("de68adab4fe82b31fe5b14abe5d17faecf4f7c8d93d74374cbf3793701290ede"),
    ]),
  },
  "test\\0\\0\\9\\50": {
    "name": "50",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("939e25879149a8b87ecb6b44ded96f6b029d5463d38fe5525005984d6d42c34a"),
    ]),
  },
  "test\\0\\0\\9\\51": {
    "name": "51",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("958a554f813d199f9f897c9f5c4d90571dfe7f67d8a3733a64598906a8e7208d"),
    ]),
  },
  "test\\0\\0\\9\\52": {
    "name": "52",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("2e8799330876d03e95428975593175ea5dd75ed3d5f3d83b4d9115dd2c6d3b71"),
    ]),
  },
  "test\\0\\0\\9\\53": {
    "name": "53",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("f476577492f325d8e617814bde3ecc83eb9e8662023d2e057c6c958ce77511e5"),
    ]),
  },
  "test\\0\\0\\9\\54": {
    "name": "54",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("b03ca92f97233541fcc95c22455cadf63c5a25089117af4b433ffc1ed9a8991f"),
    ]),
  },
  "test\\0\\0\\9\\55": {
    "name": "55",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("63d9f467b844e7d5a48120b236408e381b160c9c8355b0e3113cd407ad694ab4"),
    ]),
  },
  "test\\0\\0\\9\\56": {
    "name": "56",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("c93bcbbab1c234a01574f913bc49cc2857ccc17e4d5d8c9dc9b9b720729ed3f7"),
    ]),
  },
  "test\\0\\0\\9\\57": {
    "name": "57",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("86f85e1d9af7cac33a60fae72c05f0f410ec0c9dfd917ad18a7e2308a272e1fb"),
    ]),
  },
  "test\\0\\0\\9\\58": {
    "name": "58",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("858f7dc0f2b2e7532fec3b2a2daa551855ebaf27e29b60a90807e3f770d60815"),
    ]),
  },
  "test\\0\\0\\9\\59": {
    "name": "59",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("6047339cfc27b694b82bfc1621888997bf0e954bc5459a7ed51c424d7bd92583"),
    ]),
  },
  "test\\0\\0\\9\\7": {
    "name": "7",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("6a1da85d5dccfdefb75bb607e1f3ded8f6068085a7359ceb41a1b9930d9442f3"),
    ]),
  },
  "test\\0\\0\\9\\8": {
    "name": "8",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("105068aefc2d42cce9acc224bb369002f53f0036da394632f4623170f3b0277e"),
    ]),
  },
  "test\\0\\0\\9\\9": {
    "name": "9",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 16384,
    "content": Some([
      Id("656039f259149cf97af18fb11ebee3194cfaa059ff72d6bc9a2b91b0889d65cc"),
    ]),
  },
  "test\\0\\tests": {
    "name": "tests",
    "type": "dir",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "content": None,
    "subtree": "[some]",
  },
  "test\\0\\tests\\empty-file": {
    "name": "empty-file",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "content": Some([]),
  },
  "test\\0\\tests\\testfile": {
    "name": "testfile",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 21,
    "content": Some([
      Id("649b8b471e7d7bc175eec758a7006ac693c434c8297c07db15286788c837154a"),
    ]),
  },
  "test\\0\\tests\\testfile-hardlink": {
    "name": "testfile-hardlink",
    "type": "file",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "size": 21,
    "content": Some([
      Id("649b8b471e7d7bc175eec758a7006ac693c434c8297c07db15286788c837154a"),
    ]),
  },
  "test\\0\\tests\\testfile-symlink": {
    "name": "testfile-symlink",
    "type": "symlink",
    "linktarget": "testfile",
    "mtime": "[some]",
    "atime": "[some]",
    "ctime": "[some]",
    "content": None,
  },
}
